# ecfuzz

./: .gitignore  Cargo.toml  StandaloneFuzzTargetMain.c  fuzz_target.c  libfuzz-driver.c  libfuzz-driver.cpp  libfuzzer-driver.cpp  readme.md
examples/: example.c  example_custom_fuzzer.rs  mutate_ecfuzz_logo.py
examples/animate_logo/: mutate_ecfuzz_logo.py
examples/cli/: demo.sh
examples/cli/output/crashes/: corpus_
examples/cli/output/mutations/: corpus_0  corpus_0_1  corpus_0_1_2  corpus_0_1_2_3  corpus_0_1_2_3_4  corpus_6  corpus_6_7  corpus_6_7_8  corpus_6_7_8_9  corpus_6_7_8_9_10
examples/fuzz_c_lib/: main.rs
examples/jsoncpp/: build.sh  run.sh
examples/lib_custom_fuzzer/: custom_fuzzer.rs  example.c  example_lib.c
examples/lib_custom_fuzzer/input/: firstname.dict
examples/lib_custom_fuzzer/output/corpus/: MyCustomInput.mutation
examples/lib_custom_fuzzer/output/crashes/: MyCustomInput.mutation
examples/libfuzzer-example/: example.c  main.rs
examples/libfuzzer-example/input/: lastname.dict
examples/sqlite3/: build.sh  corpus  run.sh
input/: sample.dict
src/: config.rs  corpus.rs  execute.rs  grammar_tree.rs  lib.rs  main.rs  mutator.rs
tests/: coverage.sh  flamegraph-smalltarget.sh  flamegraph-sqlite.sh  phone_number.grammar  sample.dict  sqlite.grammar
