[package]
description = "Evolutionary Coverage-guided Fuzzing engine"
homepage = "https://github.com/matt24smith/ecfuzz"
repository = "https://github.com/matt24smith/ecfuzz"
documentation = "https://docs.rs/ecfuzz/"
license = "MIT"
readme = "./readme.md"
name = "ecfuzz"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "ecfuzz"
path = "src/bin/ecfuzz.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
rayon = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
