[package]
description = "Evolutionary Coverage-guided Fuzzing engine"
homepage = "https://github.com/matt24smith/ecfuzz"
repository = "https://github.com/matt24smith/ecfuzz"
documentation = "https://docs.rs/ecfuzz/"
license = "MIT"
readme = "./readme.md"
name = "ecfuzz"
version = "0.2.4"
edition = "2021"

[[bin]]
name = "ecfuzz"
path = "src/bin/ecfuzz.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
async-std = "1.12"
futures = {version = "*", features = ["executor",] }
petgraph = {version = "0.6", features = []}
rayon = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
lto = true
#strip = true
#opt-level = "s"
codegen-units = 1
#panic = "abort"
